# iAnonymiser

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  anonymizer.py  app.py  cli.py  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  demo-gif.yml
api/: __init__.py  routes.py
config/: __init__.py  settings.py
core/: __init__.py  anonymizer.py  models.py
docs/: README.fr.md  demo-source.txt  demo.tape
enhancers/: __init__.py  base.py  llm_guard_enhancer.py  presidio_enhancer.py  tldextract_enhancer.py
patterns/: __init__.py  base.py  colors.py
presets/: __init__.py  ansible.json  apache.json  aws.json  database.json  default.json  kubernetes.json  loader.py  minimal.json  security.json
templates/: index.html
